tests/snapshots/files__add-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
.b0_:
  c1_: int = const 3;
  print c1_;
  ret;
}
