tests/snapshots/files__add-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main {
.v0_:
  v1_: int = const 3;
  print v1_;
}
