tests/snapshots/files__add-peg.snap
---
source: tests/files.rs
expression: result.visualization
---
<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN"
 "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
<!-- Generated by graphviz version 2.43.0 (0)
 -->
<!-- Title: G Pages: 1 -->
<svg width="187pt" height="188pt"
 viewBox="0.00 0.00 187.10 188.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
<g id="graph0" class="graph" transform="scale(1 1) rotate(0) translate(4 184)">
<title>G</title>
<polygon fill="white" stroke="transparent" points="-4,4 -4,-184 183.1,-184 183.1,4 -4,4"/>
<!-- v0 -->
<g id="node1" class="node">
<title>v0</title>
<ellipse fill="none" stroke="black" cx="27" cy="-18" rx="27" ry="18"/>
<text text-anchor="middle" x="27" y="-14.3" font-family="Times,serif" font-size="14.00">int</text>
</g>
<!-- v1 -->
<g id="node2" class="node">
<title>v1</title>
<ellipse fill="none" stroke="black" cx="99" cy="-18" rx="27" ry="18"/>
<text text-anchor="middle" x="99" y="-14.3" font-family="Times,serif" font-size="14.00">int</text>
</g>
<!-- v2 -->
<g id="node3" class="node">
<title>v2</title>
<ellipse fill="none" stroke="black" cx="63" cy="-90" rx="27.9" ry="18"/>
<text text-anchor="middle" x="63" y="-86.3" font-family="Times,serif" font-size="14.00">add</text>
</g>
<!-- v2&#45;&gt;v0 -->
<g id="edge1" class="edge">
<title>v2&#45;&gt;v0</title>
<path fill="none" stroke="black" d="M54.65,-72.76C50.29,-64.28 44.85,-53.71 39.96,-44.2"/>
<polygon fill="black" stroke="black" points="42.99,-42.44 35.3,-35.15 36.77,-45.64 42.99,-42.44"/>
</g>
<!-- v2&#45;&gt;v1 -->
<g id="edge2" class="edge">
<title>v2&#45;&gt;v1</title>
<path fill="none" stroke="black" d="M71.35,-72.76C75.71,-64.28 81.15,-53.71 86.04,-44.2"/>
<polygon fill="black" stroke="black" points="89.23,-45.64 90.7,-35.15 83.01,-42.44 89.23,-45.64"/>
</g>
<!-- v3 -->
<g id="node4" class="node">
<title>v3</title>
<ellipse fill="none" stroke="black" cx="144" cy="-90" rx="35.19" ry="18"/>
<text text-anchor="middle" x="144" y="-86.3" font-family="Times,serif" font-size="14.00">arg 0</text>
</g>
<!-- v4 -->
<g id="node5" class="node">
<title>v4</title>
<ellipse fill="none" stroke="black" cx="103" cy="-162" rx="40.89" ry="18"/>
<text text-anchor="middle" x="103" y="-158.3" font-family="Times,serif" font-size="14.00">PRINT</text>
</g>
<!-- v4&#45;&gt;v2 -->
<g id="edge3" class="edge">
<title>v4&#45;&gt;v2</title>
<path fill="none" stroke="black" d="M93.52,-144.41C88.74,-136.04 82.83,-125.71 77.5,-116.37"/>
<polygon fill="black" stroke="black" points="80.41,-114.42 72.41,-107.47 74.33,-117.89 80.41,-114.42"/>
</g>
<!-- v4&#45;&gt;v3 -->
<g id="edge4" class="edge">
<title>v4&#45;&gt;v3</title>
<path fill="none" stroke="black" d="M112.72,-144.41C117.62,-136.04 123.67,-125.71 129.14,-116.37"/>
<polygon fill="black" stroke="black" points="132.32,-117.87 134.35,-107.47 126.28,-114.33 132.32,-117.87"/>
</g>
</g>
</svg>

