tests/snapshots/files__add-rvsdg-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main {
  v0: int = const 1;
  v1: int = const 2;
  v2: int = add v0 v1;
  print v2;
}

