tests/snapshots/files__add_block_indirection-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
@main {
.b0_:
  c1_: int = const 3;
  print c1_;
  ret;
}
