tests/snapshots/files__add_block_indirection-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main {
  v1: int = const 1;
  v3: int = const 2;
  v5: int = add v1 v3;
  print v5;
}
