tests/snapshots/files__add_block_indirection-rvsdg-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main {
  v1: int = const 3;
  print v1;
}

